Modifique el index.html cambie el css a color purple

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 <body>
 
   <div class="container">
-    <h1>Esta es la rama Maestra</h1>
+    <h1>Esta es la Rama Test 01</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et a, placeat, quo nobis, velit corporis minima omnis commodi amet dolore, magnam blanditiis dolorem nihil. Harum, illo, laudantium. Nihil architecto, qui.</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et a, placeat, quo nobis, velit corporis minima omnis commodi amet dolore, magnam blanditiis dolorem nihil. Harum, illo, laudantium. Nihil architecto, qui.</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas minus ab laboriosam doloremque nam distinctio recusandae, quam explicabo voluptas molestiae, aliquid voluptate sed odit nesciunt, dignissimos quae necessitatibus ex aut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum porro commodi delectus asperiores cum laboriosam animi! Fugit dolore, vitae consectetur, sunt eligendi veritatis enim nesciunt cumque ab, repellat quod! Inventore!</p>
+
   </div>
 
 
